<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="100dp"
    android:keepScreenOn="true" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.2"
        android:src="@drawable/kremlinblack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_class" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp" >

                <RadioButton
                    android:id="@+id/rb_fresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/freshman_yr"
                    android:textSize="17pt" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/rb_soph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sophomore_yr"
                    android:textSize="17pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rb_junior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/junior_yr"
                    android:textSize="17pt" />

                <RadioButton
                    android:id="@+id/rb_senior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/senior_yr"
                    android:textSize="17pt"
                    android:translationX="63dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="40dp"
            android:baselineAligned="false"
            android:paddingTop="20dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/major_bar" />

                <EditText
                    android:id="@+id/major_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/si_major"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:paddingTop="50dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/email_bar" />

                <EditText
                    android:id="@+id/text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/si_email"
                    android:inputType="textEmailAddress" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="35dp"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:paddingTop="50dp" >

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/bfoc" >
            </TextView>
        </LinearLayout>

        <Spinner
            android:id="@+id/bwtc_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp" >
        </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="80dp" >

            <Button
                android:id="@+id/prev_sip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous_ns"
                android:textSize="17pt"
                android:translationX="50dp" />

            <Button
                android:id="@+id/quit_sip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quit_ns"
                android:textSize="17pt"
                android:translationX="140dp" />

            <Button
                android:id="@+id/finish_sip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish_su"
                android:textSize="17pt"
                android:translationX="220dp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>