<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="100dp" 
    android:keepScreenOn="true">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.2"
        android:src="@drawable/kremlinblack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:baselineAligned="false"
            android:paddingTop="20dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/first_name_bar" />

                <EditText
                    android:id="@+id/first_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="40dp"
            android:baselineAligned="false"
            android:paddingTop="80dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/last_name_bar" />

                <EditText
                    android:id="@+id/last_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="40dp"
            android:baselineAligned="false"
            android:paddingTop="100dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/phone_number_bar" />

                <EditText
                    android:id="@+id/phone_number_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="150dp" >

            <Button
                android:id="@+id/np_quit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quit_ns"
                android:textSize="17pt"
                android:translationX="80dp" />

            <Button
                android:id="@+id/np_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_ns"
                android:textSize="17pt"
                android:translationX="320dp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>